# pdb-learn

./: .gitignore  README.md  boxplot.R  builder.py  config.py  createpdbs.py  createpdbs.py.old  inputs.np.npy  main.py  pdb.py  predict.py  setup.sh  strings.py  train.py  validate.py
models/: BayesianRidgeRegression.py  DummyModel.py  LearningModel.py  LogisticRegression.py  RandomForestClassifier.py  SupportVectorClassifier.py
mutators/: AbstractMutator.py  GeneticMutator.py  PermutationalMutator.py
output/: class_predictions.csv  results.csv  score_predictions.csv
rpdb/: Cargo.toml  build.sh  pyproject.toml
rpdb/src/: lib.rs
