[package]
name = "rpdb"
version = "0.1.0"
edition = "2018"
authors = ["Eli Blaney <eliblaney@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rpdb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }